--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     ],
   },
   "includes" : [
-    "src/*"
+    "src/**/*.ts",
   ],
   "exclude": [
-    "node_modules/*",
+    "node_modules",
   ]
 }
