--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "mongodb": "^4.17.2",
     "mongoose": "^5.13.22",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uuid": "^9.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
