--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@types/express": "^4.11.1",
     "@types/node": "^20.11.5",
     "body-parser": "^1.20.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0",
+    "async": "^2.6.4",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongodb": "^4.17.2",
