--- a/.github/workflows/release_stream-central-fetch.yml
+++ b/.github/workflows/release_stream-central-fetch.yml
@@ -26,21 +26,19 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: cd to functions folder
-        run: cd azure_functions
-
       - name: Create and start virtual environment
         run: |
+          cd azure_functions
           python -m venv venv
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      # Optional: Add step to run tests here
+        run: |
+          cd azure_functions
+          pip install -r requirements.txt
 
       - name: Zip artifact for deployment
-        run: zip ../release.zip ./* -r
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
