--- a/.github/workflows/release_stream-central-fetch.yml
+++ b/.github/workflows/release_stream-central-fetch.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './azure_functions' # set this to the path to your web app project, defaults to the repository root
   PYTHON_VERSION: '3.11' # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
@@ -26,21 +26,22 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - name: get .env file
+        run: |
+          echo ${{ secrets.ENV_FILE }} | base64 -d > .env
+
       - name: Create and start virtual environment
         run: |
-          cd azure_functions
           python -m venv venv
           source venv/bin/activate
 
       - name: Install dependencies
         run: |
-          cd azure_functions
           pip install -r requirements.txt
 
       - name: Zip artifact for deployment
         run: |
-          cd azure_functions
-          zip ../release.zip ./* -r
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
