--- a/.github/workflows/release_stream-central-fetch.yml
+++ b/.github/workflows/release_stream-central-fetch.yml
@@ -28,20 +28,24 @@ jobs:
 
       - name: get .env file
         run: |
+          cd azure_functions
           echo ${{ secrets.ENV_FILE }} | base64 -d > .env
 
       - name: Create and start virtual environment
         run: |
+          cd azure_functions
           python -m venv venv
           source venv/bin/activate
 
       - name: Install dependencies
         run: |
+          cd azure_functions
           pip install -r requirements.txt
 
       - name: Zip artifact for deployment
         run: |
-          zip release.zip ./* -r
+          cd azure_functions
+          zip ../release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
