--- a/.github/workflows/release_stream-central-fetch.yml
+++ b/.github/workflows/release_stream-central-fetch.yml
@@ -35,25 +35,28 @@ jobs:
       - name: Create and start virtual environment
         run: |
           cd azure_functions
+          pwd
           python -m venv venv
           source venv/bin/activate
 
       - name: Install dependencies
         run: |
           cd azure_functions
+          pwd
           pip install -r requirements.txt
 
       - name: Zip artifact for deployment
         run: |
           cd azure_functions
-          zip ../release.zip ./* -r
+          pwd
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: python-app
           path: |
-            release.zip
+            azure_functions/release.zip
             !venv/
 
   deploy:
