--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,13 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "skipLibCheck": true,
   },
-  "includes" : [
-    "src/**/*.ts",
+  "include" : [
+    "src",
   ],
   "exclude": [
-    "node_modules/**",
+    "node_modules",
     "angular-app",
   ]
 }
