--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expressmongoserver",
   "version": "1.0.0",
   "description": "This directory contains two express servers: * AppServer.js - Combined Node/Express web server w/ Mongo Access * Server.js - Encapsulated Node/Express web server w/ Mongo Access",
-  "main": "AppServer.js",
+  "main": "dist/AppServer.js",
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.11.1",
@@ -20,7 +20,7 @@
     "uuid": "^9.0.1"
   },
   "scripts": {
-    "start": "node AppServer.js",
+    "start": "node dist/AppServer.js",
     "build": "tsc -p tsconfig.json"
   },
   "author": "",
