--- a/.github/workflows/release-server_streamcentral.yml
+++ b/.github/workflows/release-server_streamcentral.yml
@@ -25,10 +25,11 @@ jobs:
         run: |
           echo ${{ secrets.ENV_FILE }} | base64 -d > ./.env
 
-      - name: npm install, build, and test
+      - name: npm install, build, and build angular project
         run: |
           npm install
           npm run build --if-present
+          npm run buildAngular
 
       - name: Zip artifact for deployment
         run: zip release.zip angular-app dist node_modules src .env tsconfig.json package.json -r
