--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "typescript": "^4.6.3",
     "uuid": "^9.0.1"
   },
+  "devDependencies": {
+    "@angular/cli": "^17.1.1"
+  },
   "scripts": {
     "start": "node dist/src/AppServer.js",
     "build": "tsc -p tsconfig.json",
