chore: add npm install

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "start": "node dist/src/AppServer.js",
     "build": "tsc -p tsconfig.json",
-    "buildAngular": "cd angular-app/angular && ng build --configuration production"
+    "buildAngular": "cd angular-app/angular && npm install && ng build --configuration production"
   },
   "author": "",
   "license": "ISC"
