--- a/.github/workflows/release_stream-central-fetch.yml
+++ b/.github/workflows/release_stream-central-fetch.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python project to Azure Function App - stream-central-fet
 on:
   push:
     branches:
-      - release
+      - release-functions
   workflow_dispatch:
 
 env:
