--- a/.github/workflows/release_stream-central-fetch.yml
+++ b/.github/workflows/release_stream-central-fetch.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python version
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
@@ -32,17 +32,13 @@ jobs:
           echo ${{ secrets.ENV_FILE }} | base64 -d > FetchMovies/.env
           echo ${{ secrets.ENV_FILE }} | base64 -d > FetchTVShows/.env
 
-      - name: Create and start virtual environment
+      - name: 'Resolve Project Dependencies Using Pip'
+        shell: bash
         run: |
           cd azure_functions
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install dependencies
-        run: |
-          cd azure_functions
-          pwd
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt --target=".python_packages/lib/site-packages"
+          
 
       - name: Zip artifact for deployment
         run: |
