--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -35,11 +35,12 @@ jobs:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
 
-    # If you want to use Azure RBAC instead of Publish Profile, then uncomment the task below
-    # - name: 'Login via Azure CLI'
-    #   uses: azure/login@v1
-    #   with:
-    #     creds: ${{ secrets.AZURE_RBAC_CREDENTIALS }} # set up AZURE_RBAC_CREDENTIALS secrets in your repository
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6D3E315ECBF24907A0A37F89CD156F7F }}
+        tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5E7EC806FAAC4A3D9D41B42419EA629D }}
+        subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_EC2C4C84BC2C4CE9B14946039DCF4E74 }}
 
     - name: Setup Python ${{ env.PYTHON_VERSION }} Environment
       uses: actions/setup-python@v4
@@ -66,6 +67,6 @@ jobs:
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }} # Remove publish-profile to use Azure RBAC
+        slot-name: 'Production'
         scm-do-build-during-deployment: true
         enable-oryx-build: true
