--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -31,7 +31,12 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: dev
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-function.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      
     steps:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
