--- a/.github/workflows/release-server_streamcentral.yml
+++ b/.github/workflows/release-server_streamcentral.yml
@@ -56,7 +56,9 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: |
+          unzip release.zip
+          rm release.zip
       
       - name: Login to Azure
         uses: azure/login@v1
