--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^20.11.5",
     "async": "^2.6.4",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.3.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "dotenv": "^16.4.5",
