--- a/angular-app/angular/package.json
+++ b/angular-app/angular/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.8",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
