--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mocha": "^10.3.0",
     "mongodb": "^4.17.2",
     "mongoose": "^5.13.22",
+    "ngx-bootstrap": "^12.0.0",
     "typescript": "^4.6.3",
     "uuid": "^9.0.1"
   },
