--- a/.github/workflows/azure-functions-app-python.yml
+++ b/.github/workflows/azure-functions-app-python.yml
@@ -20,7 +20,8 @@ name: Deploy Python project to Azure Function App
 
 on:
   push:
-    branches: release-functions
+    branches: 
+      - release-functions
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'stream-central-fetch'   # set this to your function app name on Azure
@@ -30,7 +31,12 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: dev
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-function.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      
     steps:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v3
