--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "expressmongoserver",
   "version": "1.0.0",
   "description": "This directory contains two express servers: * AppServer.js - Combined Node/Express web server w/ Mongo Access * Server.js - Encapsulated Node/Express web server w/ Mongo Access",
-  "main": "AppServer.js",
+  "main": "dist/src/AppServer.js",
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.11.1",
@@ -19,10 +19,13 @@
     "typescript": "^4.6.3",
     "uuid": "^9.0.1"
   },
+  "devDependencies": {
+    "@angular/cli": "^17.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node AppServer.js",
-    "build": "tsc"
+    "start": "node dist/src/AppServer.js",
+    "build": "tsc -p tsconfig.json",
+    "buildAngular": "cd angular-app/angular && npm install && ng build --configuration production"
   },
   "author": "",
   "license": "ISC"
