--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,10 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "skipLibCheck": true,
   },
-  "includes" : [
-    "src/**/*.ts",
+  "include" : [
+    "src",
   ],
   "exclude": [
     "node_modules",
