--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "mocha": "^10.3.0",
     "mongodb": "^4.17.2",
     "mongoose": "^5.13.22",
+    "ngx-bootstrap": "^12.0.0",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "typescript": "^4.6.3",
     "uuid": "^9.0.1"
   },
