changes made to package.json, settings.json, angular.json

--- a/ng-app/stream-central/angular.json
+++ b/ng-app/stream-central/angular.json
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/stream-central",
+            "outputPath": "../../dist/stream-central",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
