--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "bootstrap": "^5.3.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "google-auth-library": "^9.6.3",
+    "google-oauth2": "^0.1.0",
     "mocha": "^10.3.0",
     "mongodb": "^4.17.2",
     "mongoose": "^5.13.22",
     "ngx-bootstrap": "^12.0.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
     "typescript": "^4.6.3",
     "uuid": "^9.0.1"
   },
