--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["ES2015", "es2018", "dom", "ES6"],
     "target": "es6",
     "moduleResolution" : "node",
-    "rootDir": "./",
+    "rootDir": "src",
     "outDir": "dist",
     "sourceMap": true,
     "types":["node"],
@@ -13,9 +13,6 @@
     ],
     "skipLibCheck": true,
   },
-  "include" : [
-    "src",
-  ],
   "exclude": [
     "node_modules",
     "angular-app",
